--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <title>www.bihartourism.com</title>
 <frameset rows=14%,50% frameborder="0">
-	<frame src="1.html" name="a" scrolling="no"/>
-	<frame src="fff.html" name="b"  noresize scrolling="" noresize/>
+	<frame src="frame1.html" name="a" scrolling="no"/>
+	<frame src="frame2.html" name="b"  noresize scrolling="" noresize/>
   </frameset>
 </html>
