--- a/pages/frame1.html
+++ b/pages/frame1.html
@@ -4,7 +4,7 @@
 <body>
 <table border="0">
 <tr>
-	<td><img src="../logo.png" width="110%" height="30%"></td>
+	<td><img src="logo.png" width="110%" height="30%"></td>
 	<td width="80%" background="11.jpg" style="background-repeat:no-repeat;background-size:100% 300%"><h5 style=float:right><span id="date_time"></span>
             <script type="text/javascript">window.onload = date_time('date_time');</script>&nbsp;&nbsp;&nbsp;</h5>
 	<h1 align="left">
