--- a/pages/main/swap.html
+++ b/pages/main/swap.html
@@ -12,6 +12,6 @@
 
 </div>
 <!-- <marquee scrolldelay="2" scrollamount="2" onmouseout="this.start()" onmouseover="this.stop()" direction="left" class="topMarquee" style fon>Design & Developed by Rahul Ranjan (Nielit Patna Center O-level)  </marquee> -->
-<p align="center" style="color:green"><a href="http://www.rahulranjan0006.widezone.net">Design & Developed by Rahul Ranjan (Nielit Patna Center O-level)</a></h5>
+<p align="center" style="color:green"><a href="http://www.rahulranjan0006.widezone.net">Design & Developed by Rahul Ranjan (Nielit Patna Center A-level)</a></h5>
 </body>
 </html>
