--- a/pages/frame1.html
+++ b/pages/frame1.html
@@ -25,7 +25,7 @@
 	<a href="swap.html" target="d">
 	<button type="button" class="btn">Home</button></a>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	<a href="main/about bihar.html" target="d">
+	<a href="pages/main/about bihar.html" target="d">
 	<button type="button" class="btn btn-default">About Bihar</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	<a href="event.html" target="d">
 	<button type="button" class="btn btn-primary">Event</button></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
